# llama-Android-example

./: .gitignore  README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/llama/: MainActivity.kt  MessageAdapter.kt
app/src/main/res/layout/: activity_main.xml  item_message_assistant.xml
app/src/main/res/values/: colors.xml  strings.xml
lib/: build.gradle.kts
lib/src/main/cpp/: CMakeLists.txt  ai_chat.cpp
lib/src/main/cpp/llama-source/ggml/src/: ggml-backend-reg.cpp
lib/src/main/cpp/llama-source/ggml/src/ggml-vulkan/: CMakeLists.txt  ggml-vulkan.cpp
lib/src/main/java/com/arm/aichat/: InferenceEngine.kt
lib/src/main/java/com/arm/aichat/internal/: InferenceEngineImpl.kt
